# NitroEdit

./: .gitignore  Doxyfile  LICENSE  Makefile  README.md
.github/workflows/: main.yml
NitroEdit/: Makefile
NitroEdit/include/: base_Include.hpp
NitroEdit/include/ui/: ui_Background.hpp  ui_Base.hpp  ui_Sprite.hpp  ui_TextFont.hpp
NitroEdit/source/: base_Include.cpp  base_SelfNitroFs.cpp  main.cpp
NitroEdit/source/ui/: ui_Base.cpp  ui_Sprite.cpp  ui_TextFont.cpp
NitroEdit_ds/: Makefile
NitroEdit_ds/include/: base_Include.hpp
NitroEdit_ds/include/extra/: stb_truetype.h
NitroEdit_ds/include/ui/: ui_Sprite.hpp  ui_TextFont.hpp
NitroEdit_ds/source/: base_Include.cpp  main.cpp
NitroEdit_ds/source/ui/: ui_TextFont.cpp
NitroEdit_pc/: Makefile
NitroEdit_pc/NitroEdit/: CMakeLists.txt
NitroEdit_pc/NitroEdit/include/: base_Include.hpp
NitroEdit_pc/NitroEdit/include/mod/: mod_Loader.hpp
NitroEdit_pc/NitroEdit/include/ui/: ui_MainWindow.hpp
NitroEdit_pc/NitroEdit/source/: base_Include.cpp  main.cpp
NitroEdit_pc/NitroEdit/source/mod/: mod_Loader.cpp
NitroEdit_pc/NitroEdit/source/ui/: ui_MainWindow.cpp  ui_MainWindow.ui
NitroEdit_pc/libnedit/: CMakeLists.txt
NitroEdit_pc/modules/Bmg/: CMakeLists.txt  Makefile
NitroEdit_pc/modules/Bmg/include/: base_Include.hpp
NitroEdit_pc/modules/Bmg/include/ui/: ui_BmgMessageSubWindow.hpp  ui_BmgSubWindow.hpp
NitroEdit_pc/modules/Bmg/source/: base_Include.cpp  mod.cpp
NitroEdit_pc/modules/Bmg/source/ui/: ui_BmgMessageSubWindow.cpp  ui_BmgMessageSubWindow.ui  ui_BmgSubWindow.cpp  ui_BmgSubWindow.ui
NitroEdit_pc/modules/include/: args.hxx
docs/: annotated.html  classes.html  classntr_1_1ScopeGuard-members.html  classntr_1_1ScopeGuard.html  classntr_1_1fs_1_1BinaryFile-members.html  classntr_1_1fs_1_1StdioFileSystemIterator-members.html  classntr_1_1fs_1_1StdioFileSystemIterator.html  dir_067e6a1da660b0e6a2dbdf83bf103d4c.html  dir_1046bedff19d802fafedf83209ec8ba7.html  dir_1ca5a8bf2fa48a77026860ca04e30cea.html  dir_293925de5dd760fb006c4f6c47dcb54f.html  dir_73a77e6ba7dbe1e45aa3dd6399e52b70.html  dir_9516ddfab35e8be6d4e1f44627fc6c83.html  dir_f71bcb1b1e970bd44f8dff2bdb30be06.html  dir_f8b701901393e218617f21c49168ab69.html  doxygen_crawl.html  fmt__BMG_8hpp_source.html  fmt__NARC_8hpp_source.html  fmt__NCGR_8hpp_source.html  fmt__NCLR_8hpp_source.html  fmt__NSCR_8hpp_source.html  fmt__ROM_8hpp_source.html  fmt__SBNK_8hpp_source.html  fmt__SDAT_8hpp_source.html  fmt__SSEQ_8hpp_source.html  fmt__STRM_8hpp_source.html  fmt__SWAR_8hpp_source.html  fmt__Utility_8hpp_source.html  fs__Base_8hpp_source.html  fs__BinaryFile_8hpp_source.html  fs__Stdio_8hpp_source.html  gfx__BannerIcon_8hpp_source.html  gfx__Conversion_8hpp_source.html  hierarchy.html  index.html  nfs__NitroFs_8hpp_source.html  ntr__Include_8hpp_source.html  structntr_1_1Result-members.html  structntr_1_1Result.html  structntr_1_1fmt_1_1BMG-members.html  (+145 more)
docs/docs/: annotated.html  classes.html  classntr_1_1fs_1_1BinaryFile.html  dir_0c9f205b762ee7b7a855fc7d30c8249d.html  dir_18fedf3ed7484d3810e9bbe872673a20.html  dir_2c347625162663c6bd2aee0a0a2cb55c.html  dir_39d0d38334d79bfbb059ce5eb00a788e.html  dir_578a5baff746a3aa3142ab980f9a4fdb.html  dir_860a293026dec74dff26dd336a407602.html  dir_bf7d1bc529b7ab86b967366d025bcbb1.html  doxygen_crawl.html  files.html  fmt__BMG_8hpp_source.html  fmt__Common_8hpp_source.html  fmt__NCGR_8hpp_source.html  fmt__NCLR_8hpp_source.html  fmt__NSCR_8hpp_source.html  fmt__ROM_8hpp_source.html  fmt__SBNK_8hpp_source.html  fmt__SDAT_8hpp_source.html  fmt__SSEQ_8hpp_source.html  fmt__STRM_8hpp_source.html  fmt__SWAR_8hpp_source.html  fmt__Utility_8hpp_source.html  fs__Base_8hpp_source.html  fs__BinaryFile_8hpp_source.html  fs__Stdio_8hpp_source.html  gfx__Base_8hpp_source.html  nfs__NitroFs_8hpp_source.html  ntr__Include_8hpp_source.html  structntr_1_1fmt_1_1BMG-members.html  structntr_1_1fmt_1_1BMG_1_1DataSection.html  structntr_1_1fmt_1_1BMG_1_1Header-members.html  structntr_1_1fmt_1_1BMG_1_1Header.html  structntr_1_1fmt_1_1BMG_1_1InfoSection-members.html  structntr_1_1fmt_1_1BMG_1_1Message-members.html  structntr_1_1fmt_1_1CommonHeader.html  structntr_1_1fmt_1_1CommonMultiMagicHeader.html  structntr_1_1fmt_1_1MultiMagicStartBase-members.html  structntr_1_1fmt_1_1MultiMagicStartBase.html  (+125 more)
docs/docs/search/: all_3.js  all_5.js  all_7.js  all_9.js  classes_b.js  searchdata.js
docs/search/: all_0.js  all_1.js  all_2.js  all_6.js  all_9.js  all_c.js  all_d.js  all_f.js  classes_1.js  classes_4.js  classes_8.js  classes_a.js  classes_e.js
include/: base_Include.hpp  base_SelfNitroFs.hpp  base_System.hpp
include/fs/: fs_Base.hpp  fs_BinaryFile.hpp  fs_Fat.hpp
include/gfx/: gfx_BannerIcon.hpp  gfx_Base.hpp  gfx_Conversion.hpp
include/ntr/: ntr_BMG.hpp  ntr_Common.hpp  ntr_Include.hpp  ntr_NARC.hpp  ntr_NCGR.hpp  ntr_NCLR.hpp  ntr_NSCR.hpp  ntr_ROM.hpp  ntr_SDAT.hpp  ntr_STRM.hpp  ntr_SWAR.hpp
include/ntr/fmt/: fmt_Common.hpp  fmt_NARC.hpp  fmt_NCGR.hpp  fmt_NCLR.hpp  fmt_NSCR.hpp  fmt_ROM.hpp  fmt_SDAT.hpp  fmt_SSEQ.hpp  fmt_STRM.hpp  fmt_Utility.hpp
include/ntr/fs/: fs_Base.hpp  fs_BinaryFile.hpp
include/ntr/nfs/: nfs_NitroFs.hpp  nfs_SelfNitroFs.hpp
include/ntr/util/: util_System.hpp
include/ui/: ui_Background.hpp  ui_Base.hpp  ui_Sprite.hpp  ui_TextFont.hpp
include/ui/menu/: menu_BMGEditMenu.hpp  menu_Base.hpp  menu_FileBrowseMenu.hpp  menu_GraphicEditor.hpp  menu_Keyboard.hpp  menu_MainMenu.hpp  menu_ROMEditMenu.hpp  menu_ROMInfoEditMenu.hpp  (+3 more)
include/util/: util_Compression.hpp  util_Memory.hpp  util_String.hpp  util_System.hpp
pc_tools/BmgUtil/: Makefile
pc_tools/NitroFuse/: Makefile
source/: base_SelfNitroFs.cpp  main.cpp
source/extra/: lodepng.cpp
source/fs/: fs_Base.cpp  fs_BinaryFile.cpp  fs_Fat.cpp
source/gfx/: gfx_Conversion.cpp
source/ntr/: ntr_BMG.cpp  ntr_NARC.cpp  ntr_NCGR.cpp  ntr_NCLR.cpp  ntr_NSCR.cpp  ntr_ROM.cpp  ntr_SDAT.cpp  ntr_STRM.cpp  ntr_SWAR.cpp
source/ui/: ui_Base.cpp  ui_Sprite.cpp  ui_TextFont.cpp
source/util/: util_Compression.cpp  util_String.cpp
(+101 files in other folders)
